# fairytale

./: CMakeLists.txt  README.md
samples/: exceptions.ft  oop_sample.ft  samples.txt  test_module.ft  test_script.ft
src/fairylib/: CMakeLists.txt  abstract_syntax_tree.h  auto_ref.cpp  auto_ref.h  config.cpp  config.h  fairy_object.cpp  fairy_object.h  fairytale.cpp  fairytale.h  fairytale_core.cpp  fairytale_core.h  lexer.cpp  lexer.h  parsing.cpp  parsing.h  rules.cpp  rules.h  runtime.cpp  runtime.h  standard_library.cpp  standard_library.h  string_table.cpp  string_table.h  syntax.txt
src/fairytale/: CMakeLists.txt  main.cpp
